--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Tic Tac Game by gurpreet kaur</title>
+    <title>Tic Tac Game by yogesh</title>
     <link rel='stylesheet' href='https://getbootstrap.com/2.3.2/assets/css/bootstrap.css'>
     <link rel="stylesheet" href="style.css">
 
@@ -44,7 +44,7 @@
         </div>
     </div>
     <!-- js cd-->
-    <script src='js.js'></script>
+    <script src='https://github.com/yogeshpcte/image/blob/main/js.js'></script>
     <script src="script.js"></script>
 
 </body>
