--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
     <!-- js cd-->
-    <script src='https://github.com/yogeshpcte/image/blob/main/js.js'></script>
+    <script src='https://cardbyyogesh.000webhostapp.com/jss.js'></script>
     <script src="script.js"></script>
 
 </body>
